# data_movies

./: .env.example  .gitignore  LICENSE  Makefile  README.md  Snakefile  pyproject.toml  setup.cfg
notebooks/: eda.ipynb  processed_data.ipynb
scripts/: download_cpi.py  download_dataset.py  download_raw.py  download_tmdb.py  process_data.py  unique_countries.py  unique_genres.py
tests/scripts/: test_process_data.py
